fixed problex with tooltip text wrap

--- a/root/frontend/src/App/components/NavSection/NavSection.css
+++ b/root/frontend/src/App/components/NavSection/NavSection.css
@@ -99,6 +99,7 @@
     top: 0;
     left: 0;
     min-width: 110px;
+    white-space: nowrap;
     max-width: 500px;
     padding: 5px;
     font-size: 13px;
